--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -1,19 +1,8 @@
-# Sample gitconfig
-#
-
 [hub]
         protocol = https
 [user]
-        name = AUTHORNAME
-        email = AUTHOREMAIL
-[credential]
-        helper = GIT_CREDENTIAL_HELPER
-[alias]
-        co = checkout
-        promote = !$ZSH/bin/git-promote
-        wtf     = !$ZSH/bin/git-wtf
-        rank-contributers = !$ZSH/bin/git-rank-contributers
-        count   = !git shortlog -sn
+        name = Josh Cutler
+        email = josh.cutler@gmail.com
 [color]
         diff = auto
         status = auto
@@ -30,9 +19,3 @@
         prompt = false
 [help]
         autocorrect = 1
-[push]
-        # See `git help config` (search for push.default)
-        # for more information on different options of the below setting.
-        #
-        # Setting to git 2.0 default to surpress warning message
-        default = simple
